# ffi

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.json
cmake/: libffi.cmake  shadow_ffi.cmake
example/: abs.js  library.js  sqlite.js
include/: iotjs_module_buffer.h
lib/: bindings.js  callback.js  cif.js  dynamic_library.js  ffi.js  foreign_function.js  helpers.js  library.js  types.js
lib/types/: definition.js  index.js  struct.js
src/: callback_info.c  ffi.c  ffi.h  iotjs_module_ffi.c  iotjs_module_ffi.h  types.c
test/: callback.js  callback.test.js  cif.js  cif.test.js  dynamic_library.js  errno.js  foreign_function.js  foreign_function.test.js  function.js  helpers.test.js  library.js  library.test.js  objc.js  types.js  types.test.js  variadic.js
test/bindings/: types.test.js
test/helper/: runner.js
test/types/: index.test.js  struct.test.js
tools/: build  configure  test.py
